scan-car/src/components/navigation.css
/*
------ Navigation Header ------
*/
header {
    background-color: #20334B; /*sets the background of the entire header to blue. Needed for full width color*/
    color:white;
    height: auto; /*needed so the header can adapt when the contents flex into new rows*/
    width: 100%; 

    display:flex; /*needed so that the navtabs container can flex*/
    flex-direction:row; /*We want to flex*/
    flex-wrap:wrap; /*defines the wrap for the child*/

    font-size:16px;
    font-weight: bolder;

}

.navtabs {
   /*  You will be tempted to use "padding:10px;". Don't. It messes with the justify-content and the align-self of the children.  */
    display: flex;
    flex-direction: row;
    justify-content:center;
    flex-wrap:wrap;
}


/*Navigation tab for the header navigation bar.
the clickety click that gets you to the 3 sub-sections of the page.
The nav tabs looked really, REALLY wide in 256.*/
.navtab {
    width: 192px; /*This together with the padding will give us 212 px width.*/
    height:auto;
    padding: 20px; /*This ensures that the different tab descriptions don't touch each other. We don't need it all the way around, but this is easier to read.*/
    align-self: center; /* this is so it is centered on the y axis*/
    text-align: center; /* this is so that the font is centered on the x axis*/
}

.navtab:hover {
    background-color:#D32828;
}

.navTabActive {
    width: 192px;
    height:auto;
    padding: 20px;
    background-color:#F95959;
    color:#3F2222;
    align-self: center;
    text-align: center; 
    
}

.navtab-Logo {
    width: 200px;
    align-self: center;
    justify-self: center;
    padding-left: 32px;
    pointer-events: none;
  }

